
syntax = "proto3";
package dozer_admin_grpc;

message ApplicationInfo {
  string id = 1;
  string name = 2;
  string home_dir = 3;
  string created_at = 4;
  string updated_at = 5;
}
